--- a/app/src/main/res/layout/user_card.xml
+++ b/app/src/main/res/layout/user_card.xml
@@ -2,37 +2,44 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:id="@+id/cv_itemUser">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="#ddffe0"
-        android:layout_margin="8dp"
+        android:padding="8dp"
+        android:background="#b4c1ed"
         >
         <TextView
             android:id="@+id/tv_nama"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Nama"
+            android:textStyle="bold"
+            android:textSize="16sp"
             android:padding="4dp"/>
-        <TextView
-            android:id="@+id/tv_telepon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Telepon"
-            android:padding="4dp"/>
-        <TextView
-            android:id="@+id/tv_email"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Email"
-            android:padding="4dp"/>
-
+                 <LinearLayout
+                     android:id="@+id/lv_detail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                     android:orientation="vertical"
+                     android:visibility="gone">
+                 <TextView
+                android:id="@+id/tv_telepon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Telepon"
+                     android:layout_marginLeft="24dp"
+                android:padding="4dp"/>
+                 <TextView
+                android:id="@+id/tv_email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                     android:layout_marginLeft="24dp"
+                android:text="Email"
+                android:padding="4dp"/>
+                 </LinearLayout>
     </LinearLayout>
-
-
-
 </android.support.v7.widget.CardView>
